Added firebase deployment. Modified content/styling of charging station dialog

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     <title>Electric Vehicle Charging Stations</title>
 
     <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.14.0/css/all.css"
+      integrity="sha384-VhBcF/php0Z/P5ZxlxaEx1GwqTQVIBu4G4giRWxTKOCjTxsPFETUDdVL5B6vYvOt"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css"
       rel="stylesheet"
     />
